# networks_fenicsx

./: .flake8  Dockerfile  Dockerfile.fenicsx-mixed-dim  LICENSE  README.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: build_docs.yml  check_formatting.yml  test_package.yml
demos/: demo_Y_bifurcation.py  demo_arterial_tree.py  demo_double_Y_bifurcation.py  demo_honeycomb.py  demo_perf.py  demo_tree.py  performace_plots.ipynb
docs/: _config.yml  _toc.yml  api.rst  index.md
notebooks/: networkX_graphs.ipynb  performace_plots-jump_vectors.ipynb  performace_plots-lm_spaces.ipynb
src/networks_fenicsx/: __init__.py  config.py
src/networks_fenicsx/mesh/: __init__.py  arterial_tree.py  mesh.py  mesh_generation.py
src/networks_fenicsx/solver/: __init__.py  assembly.py  solver.py
src/networks_fenicsx/utils/: mesh_utils.py  petsc_utils.py  post_processing.py  timers.py
tests/: test_diag_blocks_fenics.py  test_diag_blocks_fenicsx.py  test_orientation_dolfin.py  test_orientation_dolfinx.py  test_version.py
tests/test_orientation/: mesh.h5  mesh.xdmf
