[build-system] # Require setuptool version due to https://github.com/pypa/setuptools/issues/2938
requires = ["setuptools>=61.0.0", "wheel"]

[project]
name = "networks_fenicsx"
version = "0.1.0"
description = "Solving Stokes on 1D networks with FEniCSx"
authors = [{name = "Cécile Daversin-Catty", email = "cecile@simula.no"}]
license = {file = "LICENSE"}
readme = "README.md"

[project.scripts]
networks_fenicsx = "networks_fenicsx.cli:main"

[project.optional-dependencies]
test = [
    "pytest",
]
linting = [
    "mypy",
    "flake8",
]
docs = [
   "jupyter-book",
   "jupytext",
]
all = [
   "networks_fenicsx[test]",
   "networks_fenicsx[linting]",
   "networks_fenicsx[docs]"
]

 
[tool.pytest.ini_options]
addopts = [
   "--import-mode=importlib",
]

testpaths = [
    "tests"
]

[tool.mypy]
ignore_missing_imports = true
# Folders to exclude
exclude = [
    "docs/",
    "build/"
]
# Folder to check with mypy
files = [ 
    "src",
    "tests"
]
